[project]
name = "image-parse-mcp"
version = "0.1.0"
description = "MCP server for multimodal image analysis via OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
image-parse-mcp = "image_parse.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_parse"]
